--- a/styles/architects.css
+++ b/styles/architects.css
@@ -159,16 +159,44 @@ main > section{
   max-width: 540px;
 }
 
+
+/* sponsors related styles  */
+.sponsors-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.sponsor-companies{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+  filter: grayscale(100%);
+}
+
 /* responsive media query  */
 @media screen and (max-width: 576px) {
   .navbar, .nav-link, .teams{
     flex-direction: column;
   }
 
-  .team-img-container{
+  .team-img-container, .facts-container,
+  .sponsor-companies{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+
+      .facts-container{
+      justify-items: center;
+      gap: 24px;
+    }
+    
+.sponsor-companies{
+  justify-items: center;
+  gap: 50px;
+}
   .our-features{
     margin-left: 20px;
   }
@@ -180,5 +208,9 @@ main > section{
   }
   .our-features{
     margin-left: 50px;
+  }
+  .sponsor-companies, .facts-container{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
   }
 }
