--- a/styles/architects.css
+++ b/styles/architects.css
@@ -127,6 +127,49 @@ main > section{
   font-weight: 500;
 }
 
+/* features related styles  */
+
+.features{
+  margin-top: 130px;
+  gap: 100px;
+}
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 21px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.feature-card{
+    padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+.feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+
+}
+
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.featured-architect{
+  width: 100%;
+}
+
 /* some fact related styles  */
 .facts-container{
   display: grid;
@@ -178,7 +221,10 @@ main > section{
 
 /* responsive media query  */
 @media screen and (max-width: 576px) {
-  .navbar, .nav-link, .teams{
+  .navbar, 
+  .nav-link, 
+  .features,
+  .teams{
     flex-direction: column;
   }
 
@@ -200,12 +246,24 @@ main > section{
   .our-features{
     margin-left: 20px;
   }
+
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams{
+  .teams, 
+  .features{
     flex-direction: column;
   }
+
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  
   .our-features{
     margin-left: 50px;
   }
